--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,13 @@
 
 body {
   height:100vh;
+  width: 100vw;
   margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: 'Lato', sans-serif;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
